# forge

./: .gitignore  AGENTS.md  COO_REVIEW_v0.1.md  FORGE_ARCHITECTURE_v0.1.md  FORGE_OVERVIEW_v0.1.md  FORGE_PHASES_v0.1.md  GEMINI_REVIEW_v0.1.md  GPT_REVIEW.md  HANDOFF.md  README.md  a8ra_CLUSTER_MANIFEST_v1_0.md  feature_list.json  init.sh  pyproject.toml
.forge/: bootstrap-results.md  config.yaml
.forge/benchmarks/: README.md  cartridge-template.yaml
.forge/verdicts/: verdict-1978f073.json  verdict-32bfc60c.json  verdict-3f6c07d3.json
docs/: FORGE_ARCHITECTURE_v0.2.md  FORGE_OVERVIEW_v0.2.md
docs/superpowers/plans/: 2026-03-18-integration-wiring.md
src/forge/: __init__.py  cli.py
src/forge/aci/: __init__.py  tools.py  worker.py
src/forge/benchmark/: __init__.py  runner.py
src/forge/boundary/: __init__.py  measurement.py
src/forge/config/: __init__.py  loader.py
src/forge/enforcement/: __init__.py  hooks.py  linters.py  quality.py
src/forge/gate/: __init__.py  engine.py
src/forge/git/: __init__.py
src/forge/models/: __init__.py  adapter.py  provider.py
src/forge/observability/: __init__.py  tracer.py
src/forge/oracle/: __init__.py  generator.py
src/forge/orchestrator/: __init__.py  mission_control.py  task_loop.py
src/forge/skills/: __init__.py  manager.py
tests/: test_aci.py  test_adapter.py  test_cli.py  test_config_loader.py  test_gate.py  test_m3_integration.py  test_measurement.py  test_oracle.py  test_provider_live.py  test_task_loop.py  test_trace.py  test_worker.py
